[package]
name = "raydium-sdk-v2"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "Raydium SDK V2 adaptation"
repository = "https://github.com/qwertys318/raydium-sdk-V2"
readme = "README.md"

[dependencies]
carbon-raydium-clmm-decoder = "0.5.1"
rug = "1.27.0"
solana-sdk = "2.1.13"

